syntax = "proto3";

package android.health.connect.proto.backuprestore;

option java_multiple_files = true;

message BackupData {
  Record record = 1;
}

message Record {
  string uuid = 1;
  optional string package_name = 2;
  optional string app_name = 3;
  int64 last_modified_time = 4;
  optional string client_record_id = 5;
  int64 client_record_version = 6;
  optional string manufacturer = 7;
  optional string model = 8;
  int32 device_type = 9;
  int32 recording_method = 10;

  oneof SubRecord {
    IntervalRecord interval_record = 100;
    InstantRecord instant_record = 101;
  }
}

message IntervalRecord {
  int64 start_time = 1;
  int32 start_zone_offset = 2;
  int64 end_time = 3;
  int32 end_zone_offset = 4;

  oneof Data {
    Steps steps = 100;
  }
}

message InstantRecord {
  int64 time = 1;
  int32 zone_offset = 2;

  oneof Data {
    BloodPressure blood_pressure = 100;
  }
}

message Steps {
  int32 count = 1;
}

message BloodPressure {
  int32 measurement_location = 1;
  double systolic = 2;
  double diastolic = 3;
  int32 body_position = 4;
}